--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.ukr-com</groupId>
     <artifactId>DhcpRouteConverter</artifactId>
-    <version>1.2.0</version>
+    <version>2.0.0</version>
     <packaging>jar</packaging>
     <name>DhcpRouteConverter</name>
     <description>A utility to convert network routes to DHCP options 121 and 249 and vice versa</description>
@@ -19,7 +19,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
-        <exec.mainClass>net.ukrcom.dhcprouteconverter.DhcpRouteConverter</exec.mainClass>
+        <exec.mainClass>net.ukrcom.dhcprouteconverter.Main</exec.mainClass>
     </properties>
     <dependencies>
         <dependency>
@@ -27,6 +27,11 @@
             <artifactId>junit-jupiter</artifactId>
             <version>5.12.2</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.snakeyaml</groupId>
+            <artifactId>snakeyaml-engine</artifactId>
+            <version>2.8</version>
         </dependency>
     </dependencies>
     <build>
@@ -89,6 +94,7 @@
                         <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                         <buildArg>--gc=G1</buildArg>
                         <buildArg>-march=x86-64</buildArg>
+                        <buildArg>-H:+AddAllCharsets</buildArg>
                     </buildArgs>
                 </configuration>
             </plugin>
