--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Compiled class file
 *.class
+*.txt
 
 # Log file
 *.log
@@ -19,8 +20,11 @@
 *.tar.gz
 *.rar
 
+*.bak
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
 /target/
 routers.yaml
+make-source.sh
