--- a/src/main/resources/META-INF/native-image/resource-config.json
+++ b/src/main/resources/META-INF/native-image/resource-config.json
@@ -1,9 +1,29 @@
 {
     "resources": {
-        "includes": [
-            {
-                "pattern": "routers\\.yaml"
-            }
-        ]
-    }
+        "includes": [{
+                "pattern": "\\QMETA-INF/services/java.net.spi.InetAddressResolverProvider\\E"
+            }, {
+                "pattern": "\\QMETA-INF/services/java.net.spi.URLStreamHandlerProvider\\E"
+            }, {
+                "pattern": "\\QMETA-INF/services/java.nio.charset.spi.CharsetProvider\\E"
+            }, {
+                "pattern": "\\QMETA-INF/services/java.time.zone.ZoneRulesProvider\\E"
+            }, {
+                "pattern": "\\QMETA-INF/services/javax.xml.parsers.DocumentBuilderFactory\\E"
+            }, {
+                "pattern": "\\QMETA-INF/services/javax.xml.transform.TransformerFactory\\E"
+            }, {
+                "pattern": "\\QMETA-INF/services/javax.xml.xpath.XPathFactory\\E"
+            }, {
+                "pattern": "\\QMETA-INF/services/org.slf4j.spi.SLF4JServiceProvider\\E"
+            }, {
+                "pattern": "\\Qsimplelogger.properties\\E"
+            }, {
+                "pattern": "java.xml:\\Qcom/sun/org/apache/xml/internal/serializer/Encodings.properties\\E"
+            }]
+    },
+    "bundles": [{
+            "name": "com.sun.org.apache.xml.internal.serializer.XMLEntities",
+            "locales": [""]
+        }]
 }
